@@ -20,6 +20,8 @@ lib/HTML/TreeBuilder.pm
 t/00-all_prereqs.t
 t/00system.t
 t/Util.pm
+t/as-html.t
+t/as-xml.t
 t/assubs.t
 t/attributes.t
 t/body.t
