@@ -2091,6 +2091,43 @@ sub as_HTML {
     return join( '', @html );
 }
 
+=method-dump content_as_HTML
+
+  $s = $h->content_as_HTML();
+  $s = $h->content_as_HTML($entities);
+  $s = $h->content_as_HTML($entities, $indent_char);
+  $s = $h->content_as_HTML($entities, $indent_char, \%optional_end_tags);
+
+C<(v6.00)>
+Returns a string representing in HTML the element's descendants.
+Takes the same arguments as L</as_html>.  This is like the DOM's
+C<innerHTML> property, except that it can't be used to set the
+content.  (Use C<< $h->delete_content->push_content(...) >> for that.)
+
+=cut
+
+{ package # don't index this
+      HTML::Element::_content_as;
+  our @ISA = qw(HTML::Element);
+  sub new {
+      my ($class, $elt) = @_;
+      @ISA = ref $elt unless $ISA[0] eq ref $elt;
+      bless { %$elt }, $class;  # make a shallow copy
+  }
+  sub starttag { '' }
+  *endtag = *starttag_XML = *endtag_XML = *DESTROY = \&starttag;
+}
+
+sub content_as_HTML
+{
+    HTML::Element::_content_as->new(shift)->as_HTML(@_);
+} # end content_as_HTML
+
+sub content_as_XML
+{
+    HTML::Element::_content_as->new(shift)->as_XML(@_);
+} # end content_as_XML
+
 =method-dump as_text
 
   $s = $h->as_text();
@@ -2179,6 +2216,15 @@ sub as_text_trimmed { shift->as_trimmed_text(@_) }   # alias, because I forget
   $s = $h->as_XML()
 
 Returns a string representing in XML the element and its descendants.
+
+The XML is not indented.
+
+=method-dump content_as_XML
+
+  $s = $h->content_as_XML();
+
+C<(v6.00)>
+Returns a string representing in XML the element's descendants.
 
 The XML is not indented.
 
